<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inderpreet.zeropressure.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/register_label"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentLeft="false"
                android:layout_centerHorizontal="true" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edt_reg_name_txtip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_reg_name"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/edt_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/edt_up_name"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_reg_name_txtip">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_email"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/edt_emailreg"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile_txtip"
                android:layout_below="@+id/edt_up_name">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_reg_mobile"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/edt_mobile"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pswd_txtip"
                android:layout_below="@+id/mobile_txtip">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/editText_reg_pswd"
                    android:hint="@string/edt_pswd" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_btn_register"
                android:id="@+id/reg_btn_reg"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/pswd_txtip"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
